add basic d3 example that creates an SVG

--- a/d3/index.html
+++ b/d3/index.html
@@ -6,6 +6,7 @@
 <body>
 <ol>
 <li><a href="01-include-d3.html">include-d3.html</a></li>
+<li><a href="02-d3-add-svg.html">d3-add-svg.html</a></li>
 </ol>
 </body>
 </html>
