--- a/d3/index.html
+++ b/d3/index.html
@@ -7,6 +7,9 @@
 <ol>
 <li><a href="01-include-d3.html">include-d3.html</a></li>
 <li><a href="02-d3-add-svg.html">d3-add-svg.html</a></li>
+<li><a href="03-d3-add-data.html">d3-add-data</a></li>
+<li><a href="04-data-mapped-documents.html">data-mapped-documents</a></li>
+<li><a href="05-data-driven-documents.html">data-driven-documents.html</a></li>
 </ol>
 </body>
 </html>
