assign back to funky for future reference

--- a/d3/03-d3-add-data.html
+++ b/d3/03-d3-add-data.html
@@ -23,7 +23,7 @@ var data = [2, 3, 5, 7, 11, 13, 17];
 
 var funky = svg.selectAll(".funky");			// We'll select some imaginary nodes with class .funky
 
-funky.data(data);					// And add our data to this selection
+funky = funky.data(data);				// And add our data to this selection
 
 // Voilà, d3 does nothing
 </script>
