--- a/d3/index.html
+++ b/d3/index.html
@@ -10,6 +10,7 @@
 <li><a href="03-d3-add-data.html">d3-add-data</a></li>
 <li><a href="04-data-mapped-documents.html">data-mapped-documents</a></li>
 <li><a href="05-data-driven-documents.html">data-driven-documents.html</a></li>
+<li><a href="06-data-driven-bars.html">data-driven-bars.html</a></li>
 </ol>
 </body>
 </html>
