--- a/d3/06-data-driven-bars.html
+++ b/d3/06-data-driven-bars.html
@@ -3,10 +3,13 @@
 <head>
 <title>Adding Data to d3</title>
 <style type="text/css">
-svg { border: solid 1px blue; margin: auto;}
+rect.bar {
+	fill: #28d;
+}
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 </head>
+
 <body>
 <script type="text/javascript">
 var width = window.innerWidth*0.95;
@@ -16,6 +19,7 @@ var svg = d3.select("body").append("svg")
 	    .classed("histogram", true)
 	    .attr("width", width)
 	    .attr("height", height);
+
 
 
 var data = [36,90,168,370,589,867,951,873,838,752,637,542,479,359,303,291,199,186,146,119,115,100,77,90,67,753];
@@ -39,8 +43,7 @@ var yscale = d3.scale.linear()
 bars.enter()
 	.append("rect")
 	.classed("bar", true)
-	.attr("width", width*0.8/(data.length+1))
-	.style("fill", "blue");
+	.attr("width", width*0.8/(data.length+1));
 
 bars
 	.attr("x", function(d, i) {
@@ -49,9 +52,7 @@ bars
 	.attr("y", function(d) {
 		return height*.9 - yscale(d);
 	})
-	.attr("height", function(d) {
-		return yscale(d);
-	});
+	.attr("height", yscale);
 </script>
 </body>
 </html>
