add 07 to index

--- a/d3/index.html
+++ b/d3/index.html
@@ -11,6 +11,7 @@
 <li><a href="04-data-mapped-documents.html">data-mapped-documents</a></li>
 <li><a href="05-data-driven-documents.html">data-driven-documents.html</a></li>
 <li><a href="06-data-driven-bars.html">data-driven-bars.html</a></li>
+<li><a href="07-d3-external-data.html">d3-external-data.html</a></li>
 </ol>
 </body>
 </html>
