make width and height smaller

--- a/d3/07-d3-external-data.html
+++ b/d3/07-d3-external-data.html
@@ -12,8 +12,8 @@ rect.bar {
 
 <body>
 <script type="text/javascript">
-var width = window.innerWidth;
-var height = window.innerHeight;
+var width = window.innerWidth * 0.98;
+var height = window.innerHeight * 0.98;
 
 var callingWindow = window.opener;
 
