set withCredentials to false

--- a/d3/08-jupyter-api.html
+++ b/d3/08-jupyter-api.html
@@ -105,7 +105,7 @@ function getNotebookDetails() {
 
 	var oReq = new XMLHttpRequest();
 	oReq.addEventListener("load", notebook_loaded); // TODO: also handle errors
-	oReq.withCredentials = true;
+	oReq.withCredentials = false;
 	oReq.open("GET", url, true);
 	oReq.setRequestHeader("Accept", "application/json"); // The accepted media types
 	oReq.send();
@@ -122,7 +122,7 @@ function getSessionDetails() {
 
 	var oReq = new XMLHttpRequest();
 	oReq.addEventListener("load", session_loaded); // TODO: also handle errors
-	oReq.withCredentials = true;
+	oReq.withCredentials = false;
 	oReq.open("POST", url, true);
 	oReq.setRequestHeader("Content-Type", "text/plain");  // we could use application/json, but that will trigger a preflight OPTIONS request
 	oReq.send(JSON.stringify(data)); // sends kernel and notebook info
