--- a/d3/index.html
+++ b/d3/index.html
@@ -12,6 +12,7 @@
 <li><a href="05-data-driven-documents.html">data-driven-documents.html</a></li>
 <li><a href="06-data-driven-bars.html">data-driven-bars.html</a></li>
 <li><a href="07-d3-external-data.html">d3-external-data.html</a></li>
+<li><a href="08-jupyter-api.html">d3-external-data.html</a></li>
 </ol>
 </body>
 </html>
