--- a/d3/08-jupyter-api.html
+++ b/d3/08-jupyter-api.html
@@ -114,7 +114,7 @@ function getNotebookDetails() {
 
 function getSessionDetails() {
 	var url = Jupyter.sessionsUrl;
-	var data = data = {
+	var data = {
 		"kernel": {"name": "julia-0.4"},
 		"notebook": {"path": Jupyter.notebook}
 	};
